added basic painter shader that works poorly but its a progress

--- a/.gitignore
+++ b/.gitignore
@@ -77,3 +77,4 @@ crashlytics-build.properties
 /BarberShaderProject/Library
 /BarberShaderProject/Logs
 /BarberShaderProject/UserSettings
+/BarberShaderProject/Temp
